header spacing issue fix in mobile view

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,7 +4,7 @@
     padding: 1rem ;
 
     &-collapse{
-        justify-content: end;
+        margin-top: 35px;        
     }
     &-nav{
         font-weight: 600;
